Revert "Fix JWT overlay close button z-index"

--- a/static/base.css
+++ b/static/base.css
@@ -1337,7 +1337,6 @@ body.bg-hidden {
   top: 0.5em;
   right: 0.5em;
   float: none;
-  z-index: 1;
 }
 
 .retrorecon-root .help-overlay {
